2007-09-10  Marek Safar  <marek.safar@gmail.com>
	
	* cs-parser.jay: Create QueryStartClause for the first implicit from.
	
	* generic.cs (TypeInterferenceContext.LowerBoundInference): Fixed crash
	both U and V are not generic.
	
	* linq.cs: Use standard method overload resolution for all methods.
	
2007-09-05  Marek Safar  <marek.safar@gmail.com>

	* cs-parser.jay: Plug into let clause.
	
	* linq.cs: Implemented let clause, parameters refactoring.
	
2007-08-31  Marek Safar  <marek.safar@gmail.com>

	* generic.cs (TypeParameter): Uses common Emit.
	(.IsClsComplianceRequired): Is never required.

2007-08-31  Marek Safar  <marek.safar@gmail.com>

	* cs-parser.jay: Terminates query block correctly. Fixed orderby 
	chaining.
	
	* generic.cs (TypeInferenceContext): Better error resistance.
	
	* linq.cs: Implemented range variables, transparent identifiers and
	SelectMany clause.
	
2007-08-28  Marek Safar  <marek.safar@gmail.com>

	* cs-parser.jay: Anonymous type arguments can be simple name, syntax error
	handling.

2007-08-23  Marek Safar  <marek.safar@gmail.com>

	* generic.cs (TypeInferenceV3.DoSecondPhase): Handle nested delegate
	 type parameters.
	 (IsTypeNonDependent, RemoveDependentTypes): Handle nested delegate
	 type parameters.
	
2007-08-21  Marek Safar  <marek.safar@gmail.com>

	* cs-parser.jay, linq.cs: Implemented orderby clause.
	
2007-08-20  Marek Safar  <marek.safar@gmail.com>

	* linq.cs: Switch to lambda expressions.

2007-08-20  Marek Safar  <marek.safar@gmail.com>

	* cs-parser.jay: An anonymous type can be empty.

2007-08-17  Marek Safar  <marek.safar@gmail.com>

	* linq.cs: MethodGroupExpr update.
	
2007-08-14  Marek Safar  <marek.safar@gmail.com>

	** C# 3.0 Object and collection initializers
	
	* cs-parser.jay: Grammar update.
	
2007-08-11  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #82412
	* generics.cs (TypeInferenceContext.LowerBoundInference): Don't 
	terminate type inference when an array is not paired.
	